--- a/style.css
+++ b/style.css
@@ -1,31 +1,85 @@
-
-.about{margin-top:0px;}
+*{box-sizing: border-box;}
+.about{margin-top:0px; width: 100%;}
 
 .float-btn{font-size: 20px;}
 
-nav{position: fixed; padding: 2%; display: flex; flex-direction: row; justify-content: space-around;}
+.nav-bar{position: fixed; width: 100%; padding: 1%; display: flex; flex-direction: row; justify-content: space-around; z-index: 2;}
 
 .mission-statement{margin-top: 200px;}
 
-.card-body{overflow: hidden; box-shadow: 0px 2px 10px rgba(128, 128, 128, 0); width: 84%; margin: auto; border-radius: 10px; position: relative; padding: 16px 16px;}
+.card-body{overflow: hidden; box-shadow: 0px 2px 10px rgba(128, 128, 128, 0); width: 70%; margin: auto; border-radius: 10px; position: relative; padding: 16px 16px;margin-top: 5%; margin-bottom: 15%;}
 
-.card-background-large{width: 98%; height: 98%; position: absolute; z-index: -1;  opacity: 0.3; margin-left:-1%; margin-top: -1%; border-radius: 10px;}
+
 
 
 body{background-image: url('/images/conference\ b.jpg');}
 
-footer{display: flex; position: fixed; bottom: 0; left: 0; width: 100%;}
+footer{display: flex; width: 100%;}
 .footer-bottom{ padding: 3%; }
 
-.nav-logo{width: 2%; margin-left: 25%;}
 
 .contact-elements{width: 60%; height: fit-content;}
 
-.testimonials-container{display: flex; flex-direction: row; justify-content: space-between;}
-.t-cards{width: 31%; padding: 1%; border-radius: 5px; position: relative;}
+.container{display: flex; flex-direction: row; justify-content: space-around; width: 100vw; margin: auto; margin-left: 0px;}
+.t-cards{width: 30%; height: fit-content; padding: 2%; border-radius: 10px; position: relative; margin: 20px 0px; background-color: rgba(206, 199, 199, 0.466); box-shadow: 0px 2px 20px rgb(204, 203, 203);}
 
 
-.card-background{width: 93%; height: 93%; background-color: rgb(255, 0, 0); position: absolute; z-index: -1;  opacity: 0.5; border-radius: 5px;}
-.card-background:hover{box-shadow: 0px 2px 10px grey; }
+
+
 .raves{margin-top: 100px;}
 
+.navlink_1, .navlink_2, .navlink_3{
+    font-size: small;
+    margin-right: 20px;
+}
+
+
+
+
+.contact-info{display: flex; flex-direction: row; justify-content: space-around; width: fit-content; height: auto;}
+.contact-link{width: fit-content; height: auto; margin-right: 20px;}
+
+.home{width: 100%;}
+body{width: 100vw; padding: 0;}
+.copy-para{font-size: 15px;}
+.social-top{width: fit-content; height: auto; display: block; }
+.social-links{margin-right:20px;}
+
+.social-top a {padding: 15px; color: rgb(170, 169, 169);}
+
+.container{width: 100%; height: fit-content; background-color: black;}
+.container2{width: 100%; height: 200px; background-color: grey;}
+.nav-bar{ position: fixed; top: 0;}
+.header-nav{
+position: relative;
+margin-top: 100px;
+width: 100%;
+height: 100px;
+padding: 10px;
+box-sizing: border-box;
+background: rgba(0, 0, 0, 0);
+border-bottom: 0px solid white;
+z-index: 1;
+}
+
+.logo{float: left;
+height: 90%;
+margin-left: 50px;
+}
+.btn-top-nav{float: right; margin-right: 30px; display: none;}
+.header-right{float: right; margin-right: 20%;}
+
+.header-link{text-decoration: none;
+font-size: 20px;
+color: rgb(218, 216, 216);
+padding: 10px 30px;
+border-radius: 10px;
+
+
+}
+.header-link:hover{background-color: rgba(184, 187, 189, 0.478);}
+
+.fix-header-nav{
+     background: rgba(0, 0, 0, 0.7);
+border-bottom: 1px solid white;
+}
